[metadata]
name = xcat3
summary =
description-file =
    README.rst
author = xcat3
author-email = chenglch@cn.ibm.com
classifier =
    Environment :: xCT
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    xcat3

[entry_points]
oslo.config.opts =
    xcat3 = xcat3.conf.opts:list_opts

oslo.policy.policies =
    xcat3.api = xcat3.common.policy:list_policies

console_scripts =
    xcat3-api = xcat3.cmd.api:main
    xcat3-dbsync = xcat3.cmd.dbsync:main
    xcat3-conductor = xcat3.cmd.conductor:main
    xcat3-rootwrap = oslo_rootwrap.cmd:main

xcat3.database.migration_backend =
    sqlalchemy = xcat3.db.sqlalchemy.migration

[pbr]
autodoc_index_modules = True
autodoc_exclude_modules =
    xcat3.db.sqlalchemy.alembic.env
    xcat3.db.sqlalchemy.alembic.versions.*
warnerrors = True

[build_sphinx]
all_files = 1
#build-dir = doc/build
#source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
#directory = xcat3/locale
domain = xcat3

[update_catalog]
domain = xcat3
#output_dir = xcat3/locale
#input_file = xcat3/locale/xcat3.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
#output_file = xcat3/locale/xcat3.pot

[wheel]
universal = 1
